static/style.css
/* ... */
.ui_tabs_links a:hover {
  background-color: #d7d7d7;
}

.ui_tabs_links a.selected {
  background-color: #444;
  color: #fff;
  text-decoration: none;
}

.ui_tabs_links a.yellow {
  background-color: #fcc;
  color: #000;
}

.ui_tabs_links a.yellow:hover {
  background-color: #faa;
}

.ui_tabs_links a.yellow.selected {
  background-color: #a44;
  color: #fff;
  text-decoration: none;
  padding: 1ex;
}

.ui_tabs_links a.red {
  background-color: #c33;
  color: #000;
}

.ui_tabs_links a.red:hover {
  background-color: #ebb;
}

.ui_tabs_links a.red.selected {
  background-color: #644;
  color: #fff;
  text-decoration: none;
  padding: 1ex;
}


/*************************************************************************
 * ui.filters
 */

.ui_filter {
  overflow: hidden;
  margin-bottom: 1ex;
  margin-right: 1em;
}

.ui_filter_head {
  color: #777;
  margin-top: 0.5ex;
  margin-bottom: 0.5ex;
  font-size: 90%;
  font-weight: bold;
  float: left;
  line-height: 200%;
  margin-right: 2em;
}

.ui_filter_head a {
  color: #777;
  padding: 0.5ex;
}

.ui_filter_head a.active {
  color: #fff;
  background-color: #777;
  padding: 0.5ex;
  border-radius: 5px;
}

/*************************************************************************
 * ui.paginate
 */

.ui_paginate_head {
  display: none;
  margin-bottom: 1ex;
}

.ui_paginate_foot {
  margin-top: 1ex;
}

.ui_paginate_select a {
  padding: 0.5em;
}

/*************************************************************************
 * ui.bargraph
 */

.bargraph {
  width: 103px;
}

.bargraph50 {
  width: 52px;
}

.bargraph div {
  float: left;
  margin-top: 0.5ex;
  height: 1.3ex;
}

/*************************************************************************
 * vertical ui.form
 */

.vertical {
  margin-top: 2ex;
}

.login input[type=text],
.vertical input[type=text],
.login input[type=password],
.vertical input[type=password],
.vertical textarea,
.vertical select {
  font-family: sans-serif;
  font-size: 100%;
  width: 69%;
  border: 1px solid #444;
  padding: 0.2ex 0.2em 0.2ex 0.2em;
  margin-bottom: 1ex;
}



.login input[type=password],
.vertical input[type=password] {
  width: 16em;
}

.vertical select {
  padding-right: 0;
}

.login .ui_field_label,
.vertical .ui_field_label {
  text-transform: uppercase;
  font-size: 70%;
  line-height: 120%;
  font-weight: bold;
  color: #777;
  width: 29%;
  display: block;
  float: left;
  clear: left;
  text-align: right;
  padding-right: 0.5em;
}

.ui_field_label.label_right {
  text-align: left;
  width: auto;
}

.login input[type=text],
.login input[type=password] {
  width: 10em;
}

.login div,
.vertical div {
  clear: left;
}

.vertical span {
  display: block;
  margin-bottom: 0.5ex;
}

.vertical span:after {
  content: " ";
}

.vertical span span {
  display: inline;
  margin-bottom: 0;
}

.login input[type=submit],
.vertical input[type=submit] {
  font-size: 100%;
  margin-left: 29%;
  background-color: #444444;
  color: #fff;
  border: none;
  padding: 0.75ex;
}

.login input[type=submit]:hover,
.vertical input[type=submit]:hover {
  background-color: #444444;
}

@media screen and (max-width: 480px) {
  .login input[type=text],
  .vertical input[type=text],
  .login input[type=password],
  .vertical input[type=password],
  .vertical textarea,
  .vertical select,
  .vertical input[type=submit],
  .login input[type=submit] {
    width: 98%;
  }
  .login .ui_field_label,
  .vertical .ui_field_label {
    text-align: left;
    width: 98%;
  }
  .login input[type=text],
  .login input[type=password] {
    width: 98%;
  }
  .login input[type=submit],
  .vertical input[type=submit] {
    margin-left: 0;
  }
}



/*************************************************************************
 * Tables
 */


table a.action {
  font-size: 70%;
  line-height: 190%;
  padding: 0.5ex;
  color: #777;
}

table a.active {
  color: #fff; 
}

th {
  text-align: left;
}

tr:hover td {
  background-color: #f2f2f2;
}

.nohover tr:hover td {
  background-color: #fff;
}

.initiatives_list .nohover tr:hover td {
  background-color: #f2f2f2;
}

.nohover table tr:hover td {
  background-color: #f2f2f2;
}


tr table tr:hover td {
  background-color: #fff;
}


/*************************************************************************
 * Positive / Negtive votes
 */


.positive_votes span {
  display: inline;
}

.positive_votes {
  display: inline;
  background-color: #cfc;
  padding: 0.3ex 0.5em 0.3ex 0.5em;
}

.negative_votes span {
  display: inline;
}

.negative_votes {
  display: inline;
  background-color: #fcc;
  padding: 0.3ex 0.5em 0.3ex 0.5em;
}

.suggestion_my_opinion a,
.suggestion_my_opinion span {
  white-space: nowrap;
  padding-left: 0.2ex !important;
  padding-right: 0.2ex !important;
}

.active {
  background-color: #444;
  color: #fff;
}

.active_red2 { background-color: #a00; color: #fff !important; }
.active_red1 { background-color: #f88; color: #000 !important; }
.active_green1 { background-color: #8f8; color: #000 !important; }
.active_green2 { background-color: #0a0; color: #000 !important; }



/*************************************************************************
 * Unit list
 */

.unit_list a {
  font-weight: bold;
}

/*************************************************************************
 * Area list
 */

.member_area_list {
  margin-bottom: 0ex;
  border-radius: 8px;
  border: 1px solid #aaa;
  padding: 1ex;
  margin-bottom: 2ex;
}

.member_area_list .unit_head {
  font-size: 120%;
  font-weight: bold;
  float: left;
  clear: both;
}

.member_area_list .unit_delegatee {
  float: left;
}

.member_area_list .voting_priv_info {
  clear: left;
  margin-top: 4ex;
}

.member_area_list .more_areas {
  font-style: italic;
}

.area_list {
  margin-bottom: 4ex;
}

.member_area_list .area_list {
  margin-bottom: 0;
}

.area_list .area {
  line-height: 32px;
  clear: both;
}

.area_list .bargraph {
  line-height: 10px;
}

.area_list .area .delegatee {
  white-space: nowrap;
}
/* ... */

